Revision history for Perl extension CGI::Header.

0.21  Feb 25th, 2013

  [CGI::Header::PSGI]

    - psgi_header() is compatible with CGI::Simple's header() method.
      Namely, psgi_header() can be configured by no_cache() method.
      If no_cache() isn't available, that method will be ignored simply.
      And so psgi_header() is compatible with CGI.pm as well.

    - I'm not sure about whether to use Role::Tiny ;)

    - [BUG FIX] psgi_redirect() invokes self_url(), not url()

    - Imports CGI::PSGI's psgi_headers.t and redirect.t

0.20  Feb 24th, 2013

  - Add "REQUIRED METHODS" to CGI::Header::PSGI's POD

0.19  Feb 11th, 2013

  Add CGI::Header::PSGI which exports two methods on demand: psgi_header()
  and psgi_redirect().

    use parent 'CGI';
    use CGI::Header::PSGI qw(psgi_header psgi_redirect);

  CGI::Header::PSGI helps you create your own CGI::PSGI-compatible class.

  [INCOMPATIBLE CHANGES]

    - rehash() and new() rename '-uri' and '-url' to '-location'

    - flatten() and each() stringify CGI::Cookie objects by default.

0.18  Feb 9th, 2013

  - You can pass a media type to new() in the following situation:

      my $h = CGI::Header->new('text/plain');
      $h->header; # => { -type => 'text/plain' }

  - new() throws an exception in the following situation:

      my $h = CGI::Header->new( -foo => 'bar', '-baz' );
      # die "Odd number of elements in hash assignment"

  [STATE OF THIS MODULE]

    The following methods are unstable:

      - $h->set( 'Content-Type => $value )
      - $h->set( 'P3P' => $value )
      - $h->set( 'Expires' => $value )

        I'm not sure about how to process these headers properly at this time.

0.17  Jan 18th, 2013

  [DOCUMENTATION]

    - Add "EXAMPLES" and "DEPENDENCIES"

  [INTERNALS]

    - Fix META.yml ("version" was broken)

0.16  Jan 14th, 2013

  [INCOMPATIBLE CHANGES]

    - rehash() throws an exception when a property name is duplicated:

        my $header = {